# factories/request_json_factory.go
@@ -2,7 +2,7 @@ package factories
 
 // RequestUserJSONFactory ... JSONにマッピングする構造体の宣言
 type RequestUserJSONFactory struct {
-	Username    string `json:"username" binding:"required"`
-	Password    string `json:"password" binding:"required"`
-	Mailaddress string `json:"mailaddress" binding:"required"`
+	Username    string `json:"username" binding:"required" example:"usernameis0123"`
+	Password    string `json:"password" binding:"required" example:"passwordis0123"`
+	Mailaddress string `json:"mailaddress" binding:"required" example:"0123@example.com"`
 }
